tests/conformance/invalid/shape_mismatch.hedl
%VERSION: 1.0
%STRUCT: User: [id,name,email]
---
users: @User
  |u1,Alice
